<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GraduationDesign_KLT</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Settings</string>
    <string name="title_bar_text">龙岩学院</string>
    <string name="str_diet">饮食</string>
    <string name="str_training">训练</string>
    <string name="str_tab3">tab3</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_registered">RegisteredActivity</string>
    <string name="str_login">登入</string>
    <string name="str_registered">Registered</string>
    <string name="str_forgotPassword">忘记密码</string>
    <string name="str_newAnAccount">注册</string>
    <string name="str_registeredAccount">账号 :</string>
    <string name="str_rememberPassword">记住密码</string>
    <string name="str_registeredPassword">密码 :</string>
    <string name="str_nowPassword">原密码 :</string>
    <string name="str_newPassword">新密码 :</string>
    <string name="str_registeredConfirmPassword">确认密码:</string>
    <string name="str_registeredPasswordPrompt">密码由6~16位数字、英文字母组成</string>
    <string name="str_registeredAccountPrompt">请输入手机号码！</string>
    <string name="str_phone_type_erroe">手机号码格式错误！</string>
    <string name="str_email_type_erroe">邮箱地址格式错误！</string>
    <string name="str_account_type_erroe">账号格式错误！</string>
    <string name="str_data_type_erroe">数据格式错误,确认是否输入错误！</string>
    <string name="str_data_is_empty">该数据不能为空！</string>
    <string name="str_password_is_different">两次输入密码不一致！</string>
    <string name="str_password_is_error">原密码错误！</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="str_test_textview">初中的化学老师很搞笑，记得有一次要期中考试了，他给我们划了几个反应方程式，然后说“这几个方程式，考试一定有，要是没有，你就拿砖头砸我家玻璃！”
说完喝了口水继续说道“砸完，看我怎么收拾你！”</string>
    <string name="title_activity_infomation">InfomationActivity</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="date_choose_text">日期选择</string>
    <string name="ok_btn_text">确定</string>
    <string name="message_prompt_text">修改资料</string>
    <string name="cancel_btn_text">取消</string>
    <string name="title_activity_edit_password">EditPasswordActivity</string>
    <string name="title_activity_video_display">VideoDisplayActivity</string>
    <string name="title_activity_video_down_load">VideoDownLoadActivity</string>
    <string name="str_video_prompt">中途放弃将不会记录在训练历史！</string>
    <string name="str_data_zero">0</string>
    <string name="str_weight_unit">KG</string>
    <string name="str_weight">体重</string>
    <string name="str_BIM">BIM</string>
    <string name="str_weight_with_lastTime">比上次</string>
    <string name="str_BMI_calculate">BMI计算</string>
    <string name="str_BMI_height">请输入身高(M)</string>
    <string name="str_BMI_weight">请输入体重(KG)</string>
    <string name="str_BMI_confirm_calculate">确认计算</string>
    <string name="str_BFR">BFR</string>
    <string name="str_BFR_calculate">BFR计算</string>
    <string name="str_BFR_waist_circumference">请输入腰围(公分)</string>
    <string name="str_release_dynamic_prompt">分享你的健身心得和经验吧</string>
    <string name="str_focusId">输入对方ID</string>
    <string name="str_release_dynamic">发布动态</string>
    <string name="str_add_user_diet">收藏饮食</string>
    <string name="str_delete_user_diet">取消收藏</string>
    <string name="str_find_user">搜索用户</string>
    <string name="str_reply">回复</string>
    <string name="str_replyText">回复内容...</string>
    <string name="str_commentsDefult">评论0</string>
    <string name="str_thumbUpDefult">赞0</string>

    <!-- 设置 -->
    <string name="setting_text">设置</string>
    <string name="setting_message_remind_text">自动检测新版本</string>
    <string name="setting_wifi_no_text">仅wifi下显示图片</string>
    <string name="setting_clear_cache_text">清空缓存</string>
    <string name="setting_version_update_text">版本更新</string>
    <string name="setting_about_text">关于</string>
    
   <string name="str_newVersion_prompt">新版本提示</string>
   <string name="str_isUpdateNewVersion">确认更新新版本？</string>
 	<string name="str_ItIsNewVersion">已是最新版本</string>
   
    <string name="str_prompt">提示</string>
    <string name="str_clear_cache_prompt">确定清除缓存（缓存包含图片，不包含视频、音乐）？</string>
    
     <string name="can_not_find_version_name">找不到版本名称</string>
     <string name="version_name">Focus</string>
</resources>