<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}"
    android:orientation="vertical"
    android:background="@drawable/bag" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:padding="@dimen/base_padding">

       

    </RelativeLayout>


	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:padding="@dimen/base_padding">
    </RelativeLayout>
    
	
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="2"
	    android:padding="@dimen/base_padding" >

	    <LinearLayout
	        android:id="@+id/linearLayout1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:orientation="horizontal" >

	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:text="@string/str_registeredAccount"/>

	        <EditText
	            android:id="@+id/edi_registeredAccount"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:singleLine="true" 
	            android:textSize="12sp"
	            android:hint="@string/str_registeredAccountPrompt">

	        </EditText>

	         <RelativeLayout
	           android:layout_width="24dp"
	           android:layout_height="28dp" >
	        </RelativeLayout>
	        

	    </LinearLayout>

	    <LinearLayout
	        android:id="@+id/linearLayout2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/linearLayout1"
	        android:layout_marginTop="22dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:orientation="horizontal" >


	        <TextView
	            android:id="@+id/textView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/str_registeredPassword"/>

	        

	        <EditText
	            android:id="@+id/edi_registeredPassword"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:singleLine="true"
	            android:inputType="textPassword" 
	            android:textSize="12sp"
	            android:hint="@string/str_registeredPasswordPrompt" />

	    </LinearLayout>
	     <LinearLayout
	        android:id="@+id/linearLayout3"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/linearLayout2"
	        android:layout_marginTop="22dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:orientation="horizontal" >

	        <TextView
	            android:id="@+id/textView3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/str_registeredConfirmPassword"/>

	        

	        <EditText
	            android:id="@+id/edi_confirmPassword"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	             android:singleLine="true"
	             android:hint="@string/str_registeredPasswordPrompt"
	              android:textSize="12sp"
	            android:inputType="textPassword" />

	    </LinearLayout>

	    <Button
	        android:id="@+id/btn_registered"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/linearLayout3"
	        android:layout_alignRight="@+id/linearLayout3"
	        android:layout_below="@+id/linearLayout3"
	        android:layout_marginTop="50dp"
	        android:text="@string/str_registered" />

	   

	</RelativeLayout>
	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/base_padding">


    </RelativeLayout>

</LinearLayout>
